--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^2.0.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
