--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.0.15"
+    "vuetify": "^2.0.16"
   },
   "devDependencies": {
+    "@mdi/font": "^4.4.95",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -57,6 +58,7 @@
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
