--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
+    "jump.js": "^1.0.2",
     "log4js": "^5.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
