--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vuetify": "^2.0.16"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@mdi/font": "^4.4.95",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
