--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "log4js": "^5.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.0.16"
+    "vuetify": "^2.0.16",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
