--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.12.0",
     "jump.js": "^1.0.2",
     "log4js": "^5.1.0",
+    "material-design-icons": "^3.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.16",
