--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@mdi/font": "^4.4.95",
+    "@vue/test-utils": "^1.0.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
